@@ -99,6 +99,20 @@ class OTPDevice(BaseDevice):
             del self._dev
 
 
+class YKStandardDevice(BaseDevice):
+    supported = False
+    serial = None
+    version = (0, 0, 0)
+    mode = MODE.mode_for_flags(True, False, False)
+
+    def __init__(self, version):
+        self._version = version
+
+    @property
+    def default_name(self):
+        return 'YubiKey %s' % '.'.join(map(str, self._version))
+
+
 def open_first_device():
     dev = yk_open_first_key()
     if not dev:
@@ -106,6 +120,9 @@ def open_first_device():
 
     otp_device = OTPDevice(dev)
     if otp_device.version[0] < 3:
-        raise Exception("Device is not a YubiKey NEO!")
+        try:
+            otp_device = YKStandardDevice(otp_device.version)
+        except Exception as e:
+            print e
 
     return otp_device
